# cpp-template

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  dependencies.cmake  docker-compose.yaml  package-list.txt
src/: main.cpp
